# UWRT_TRAINING_2

./: CMakeLists.txt  package.xml
include/software_training/: distance_publisher.hpp  turtle_action_server.hpp  turtle_kill.hpp  turtle_move_circle.hpp  turtle_spawn.hpp  turtle_teleport.hpp
launch/: testlaunch.py
src/: distance_publisher.cpp  turtle_action_server.cpp  turtle_kill.cpp  turtle_move_circle.cpp  turtle_spawn.cpp  turtle_teleport.cpp
